--- a/index.html
+++ b/index.html
@@ -5,27 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- jquery -->
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.js"
-    integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-    crossorigin="anonymous"></script>
+
     <!-- my css -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- moment -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <title>Weather Dashboard</title>
 </head>
 <body>
-<header>
 
+<header>
+    <div class="jumbotron bg-info text-white">
+        <h1 class="text-center">Weather Dashboard</h1>
+    </div>
 </header>
 <main>
-    
-</main>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <form>
+                <div class="form-group">
+                  <label for="cityInput">Search By City:</label>
+                  <input type="text" class="form-control" id="cityInput" aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="btn btn-info" id="submit-city">Submit</button>
+              </form>
+              <!-- where the city will go after search -->
+              <div id="city-history">
 
+              </div>
+        </div>
+        <div class="col-md-9">
+            <!-- where the current weather info will go -->
+            <div id="current-weather">
+
+            </div>
+            <!-- where the five day forecast will go -->
+            <div id="five-day">
+
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
+
+</footer>
+</div>
 <!-- bootstrap js links -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!-- jquery -->
+<script
+src="https://code.jquery.com/jquery-3.4.1.js"
+integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+crossorigin="anonymous"></script>
 <!-- my js link -->
 <script src="assets/js/script.js"></script>
 </body>
