got icon working for current weather

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="col-md-9">
             <!-- where the current weather info will go -->
-            <div id="current-weather">
+            <div class = "card" id="current-weather">
 
             </div>
             <!-- where the five day forecast will go -->
