--- a/index.html
+++ b/index.html
@@ -31,17 +31,24 @@
                 <button type="submit" class="btn btn-info" id="submit-city">Submit</button>
               </form>
               <!-- where the city will go after search -->
-              <div id="city-history">
+              <div class = "card list-group-flush text-center" id="city-history">
 
               </div>
         </div>
         <div class="col-md-9">
+            <div class = "card bg-light mb-3">
+                <div class ="row no-gutters">
+                    <div class="col-md-2">
+                        <div id="icon">
+                        </div>
+                    </div>
+                    <div class="col-md-10" id="current-weather">
             <!-- where the current weather info will go -->
-            <div class = "card" id="current-weather">
-
+                    </div>
+                </div>
             </div>
             <!-- where the five day forecast will go -->
-            <div id="five-day">
+            <div class="card-deck" id="five-day">
 
             </div>
         </div>
