--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <header>
     <div class="jumbotron bg-info text-white">
-        <h1 class="text-center">Weather Dashboard</h1>
+        <h1 class="text-center display-1">Weather Dashboard</h1>
     </div>
 </header>
 <main>
@@ -36,7 +36,7 @@
               </div>
         </div>
         <div class="col-md-9">
-            <div class = "card bg-light mb-3">
+            <div class = "card bg-info mb-3">
                 <div class ="row no-gutters">
                     <div class="col-md-2">
                         <div id="icon">
@@ -48,14 +48,16 @@
                 </div>
             </div>
             <!-- where the five day forecast will go -->
-            <div class="card-deck" id="five-day">
+            <div id="title"></div>
+            <div class="card-group" id="five-day">
                 
             </div>
         </div>
     </div>
 </main>
 <footer>
-
+    <nav class="navbar navbar-light bg-info">
+      </nav>
 </footer>
 </div>
 <!-- bootstrap js links -->
